--- a/Funciones genericas/Genericas/Prototipo1.cbp
+++ b/Funciones genericas/Genericas/Prototipo1.cbp
@@ -2,13 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Clase 3 funciones" />
-		<Option execution_dir="C:/TEST/Leandro Delgado/Clase 3 funciones/" />
+		<Option title="Genericas" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Clase 3 funciones" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Genericas" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -17,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Clase 3 funciones" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Genericas" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,7 +31,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="../Leandro Delgado/Clase 3 funciones/main.c">
+		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
